--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/main/VisualStudio.gitignore
 
+
 # Experiment outputs
 experiments/
 experiments/**/*.pth
@@ -17,6 +18,7 @@ experiments/**/*.log
 !*.*
 !*/
 *.out
+*.png
 
 .vscode/
 *.exe
